--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "classnames": "2.3.1",
     "date-fns": "2.23.0",
     "gray-matter": "4.0.3",
+    "mongodb": "^4.1.0",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "14.0.1",
     "remark-html": "14.0.0",
+    "swr": "^0.5.6",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^16.7.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
