--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "mongodb": "^4.1.0",
     "next": "^11.1.0",
+    "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^14.0.1",
