--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,9 +13,9 @@
       "sizes": "512x512"
     }
   ],
-  "background_color": "#06092B",
-  "description": "Boilerlate utilizando Typescript, React, NextJS e Styled Components!",
+  "background_color": "#fff",
+  "description": "Programador é tudo doido! E eu não sou diferente, confira meus posts e aprenda React Native e NodeJs",
   "display": "fullscreen",
   "start_url": "/",
-  "theme_color": "#06092B"
+  "theme_color": "#fff"
 }
