--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Dev Doido",
-  "short_name": "DevDoido",
+  "name": "Blog",
+  "short_name": "Blog",
   "icons": [
     {
       "src": "/img/icon-192.png",
