--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-highlight": "^5.0.0",
     "remark": "^14.0.1",
     "remark-html": "^14.0.0",
     "swr": "^0.5.6",
