--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "classnames": "2.3.1",
     "date-fns": "2.23.0",
     "gray-matter": "^4.0.3",
@@ -16,6 +17,7 @@
     "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.22.0",
     "rehype-highlight": "^5.0.0",
     "remark": "^14.0.1",
     "remark-html": "^14.0.0",
